# tdd-fastapi-docker

./: .readthedocs.yaml  Makefile  README.md  docker-compose.yml  mkdocs.yml  release.sh
.github/workflows/: main.yml
docs/: requirements.txt
project/: .dockerignore  Dockerfile  Dockerfile.prod  aerich.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/db/: Dockerfile
project/tests/: conftest.py  test_ping.py  test_project.py  test_summaries.py  test_summaries_unit.py
