[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Kenny Nguyen <kkenny.nguyen@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
