[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Kenny Nguyen <kkenny.nguyen@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
tortoise-orm = "^0.17.7"
aerich = "^0.5.8"
pytest = "^6.2.5"
requests = "^2.26.0"
gunicorn = "^20.1.0"
pytest-cov = "2.12.1"
flake8 = "3.9.2"
black = "^21.9b0"
isort = "5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
